# OctoRelay

./: .gitattributes  .gitignore  .pylint.rc  .pylintrc  CHANGELOG.md  MANIFEST.in  MIGRATION_miniver_to_scm.md  README.md  Taskfile.yml  _add_to_setup_py.txt  deploy.sh  deployAndRestart.sh  installOnPiAndRestart.sh  mypy.ini  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: CI.yaml  codeql.yml  release.yaml  snapshot.yaml
octoprint_octorelay/: __init__.py  _version.py  common_mocks.py  const.py  driver.py  exceptions.py  listing.py  migrations.py  model.py  relay_loader.py  relay_register.json  task.py  test__init.py  test_driver.py
octoprint_octorelay/relay_modules/: mrBase.py  mrGpio.py  proxr.py
octoprint_octorelay/static/css/: octorelay.css
octoprint_octorelay/static/js/: octorelay.js
octoprint_octorelay/templates/: octorelay_navbar.jinja2  octorelay_settings.jinja2
tests/: test_driver.py  test_driver_get_or_create.py  test_init.py  test_migrations.py  test_templates.py
tests/snapshots/: snap_test_templates.py
ts/: .eslintrc.json  OctoPrint.d.ts  bindings.spec.ts  jest.config.json  octorelay.js  octorelay.spec.ts  octorelay.ts  package.json  tsconfig.build.json  tsconfig.json  tsconfig.stub.json  tsup.config.ts
ts/__snapshots__/: octorelay.spec.ts.snap
ts/helpers/: actions.spec.ts  actions.ts  const.ts  countdown.spec.ts  countdown.ts  hints.spec.ts  hints.ts  narrowing.spec.ts
ts/helpers/__snapshots__/: actions.spec.ts.snap  countdown.spec.ts.snap  hints.spec.ts.snap
ts/mocks/: OctoRelayModel.ts  actions.ts  countdown.ts  hints.ts  messageHandler.ts
ts/model/: OctoRelayModel.spec.ts  OctoRelayModel.ts  initOctoRelayModel.ts  messageHandler.spec.ts
ts/stub/: octorelay.ts
ts/styles/: navbar.scss  octorelay.scss  settings.scss
ts/types/: Hints.ts  OctoPrint.d.ts  OwnModel.ts
ui/: .eslintrc.json  bindings.spec.ts  eslint.config.js  integration.spec.ts  octorelay.spec.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qa.spec.ts  tsconfig.json  tsdown.config.ts  tsup.config.ts  vitest.config.ts
ui/__snapshots__/: integration.spec.ts.snap  qa.spec.ts.snap
ui/helpers/: actions.spec.ts  const.ts  countdown.spec.ts  countdown.ts  hints.spec.ts  hints.ts  narrowing.spec.ts  narrowing.ts
ui/mocks/: OctoRelayModel.ts  actions.ts  countdown.ts  hints.ts  jQuery.ts  lodash.ts  messageHandler.ts
ui/model/: OctoRelayModel.spec.ts  OctoRelayModel.ts  initOctoRelayModel.spec.ts  messageHandler.spec.ts  messageHandler.ts
ui/styles/: octorelay.less  octorelay.scss
ui/types/: Hints.ts  OctoPrint.d.ts  Relay.ts
(+3 files in other folders)
