[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoRelay"
dynamic = ["version"]
description = "A plugin that adds buttons to the navbar for toggling GPIO on the RPi. It can be used for turning relays on and off."
authors = [
    { name = "Boris Burgstaller", email = "raspi@burgstaller.net" }
]
license = { text = "AGPLv3" }
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "gpiozero",
    "lgpio",
    "RPi.GPIO"
]

[tool.setuptools.dynamic]
version = { attr = "octorelay.__version__" }

[project.urls]
Homepage = "https://github.com/borisbu/OctoRelay"
Source = "https://github.com/borisbu/OctoRelay"
